<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7A0D47A1"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/ref"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/ref_input_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/design"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_input_update" />

    <EditText
        android:id="@+id/design_input_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/design"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/prix"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/design_input_update" />

    <EditText
        android:id="@+id/prix_input_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/placeholder_prix"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prix"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/qty"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prix_input_update" />

    <EditText
        android:id="@+id/qty_input_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qty"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_maj"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:text="@string/enregister"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qty_input_update" />

    <Button
        android:id="@+id/btn_annuler"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/button_background"

        android:text="@string/annuler"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qty_input_update" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="29dp"
        android:layout_marginTop="25dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/btn_annuler"
        app:layout_constraintStart_toEndOf="@+id/btn_maj"
        app:layout_constraintTop_toBottomOf="@+id/qty_input_update" />

</androidx.constraintlayout.widget.ConstraintLayout>